fixed events header alignment on mobile

--- a/src/pages/events/style.less
+++ b/src/pages/events/style.less
@@ -67,7 +67,7 @@
   .events-header {
     flex-direction: column;
     align-items: flex-start;
-    padding: 1em;
+    padding: 1em 2.5em;
     h1 {
       padding: 0em;
       padding-bottom: 0.5em;
